feat: Implement world difficulty, boss arena & altar gen, rune codex, armor mitigation, and deep mine features